modules/boogie/test/data/TypeSystemException/Orderings.bpl

const g:int extends x;        // error: undeclared parent
